src/components/carousel.css
.container {
    width: 40vw;
    height: 50vh;
    position: relative;
}


.swiper-slide img {
  width: 100%;
  height: 50vh;
  object-fit: cover;
  border-radius: 10px;
}

.swiper-slide {
    width: 70%;
    height: 100%;
    transition: transform 0.4s ease, opacity 0.4s ease;
}

.mySwiper .swiper-pagination-bullet {
  background-color: rgba(50, 88, 44, 1);   /* change inactive color */
  width: 10px;
  height: 10px;
}

/* Active dot */
.mySwiper .swiper-pagination-bullet-active {
  background-color: #32582C;  /* your green color */
}



.content {
  display: flex;
  flex-direction: column;
}

@media (min-width: 1500px) {
  .content {
    gap: 2rem;
  }
}

.footer {
  display: block;
}

/* .content .footer {
  display: block;
  margin-top: 1rem;
} */

/* .swiper {
    padding-bottom: 40px;
} */

